# paypal-django

./: pyproject.toml  readme.md
config/: settings.py
