[tool.poetry]
name = "paypal"
version = "0.1.0"
description = ""
authors = ["codenameGIZMO <shavonnecarson94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.4"
django-paypal = "^1.1.1"
django-bootstrap = "^0.2.4"
django-bootstrap4 = "^3.0.1"
python-decouple = "^3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
